# sailor-moon-fansite

./: .gitignore  Justfile  README.md  makeup.py  migrate-eps.py  next-ep.py  pylock.toml  pyproject.toml
src/makeup/: __init__.py  __main__.py  helpers.py  sailor.py
src/makeup/scripts/: next_ep.py
static/: date.js  style.css
templates/: _root.html  _titles.jinja2  content.html  index.html  root.html
templates/_helpers/: images.jinja2  includers.jinja2  review.html  review_table_root.html  review_table_row.html
templates/content/: watch_guide.html
templates/reviews/: _macros.html  _reviews.html  _reviews_base.html  classic.html
templates/reviews/classic/: ep001.html  ep002.html  ep003.html  ep004.html  ep005.html  ep006.html  ep007.html  ep008.html  ep009.html  ep010.html  ep011.html  ep012.html  ep013.html  ep014.html  ep015.html  ep016.html  ep017.html  ep018.html  ep019.html  ep020.html  ep021.html  ep022.html  ep023.html  ep024.html  ep025.html  ep026.html  ep027.html  ep028.html  ep029.html  ep030.html  ep031.html  ep032.html  ep033.html  ep034.html  ep035.html  index.html
templates/reviews/classic/ep001/: _table.html  index.html
templates/reviews/classic/ep002/: _table.html  index.html
templates/reviews/classic/ep003/: _table.html  index.html
templates/reviews/classic/ep004/: _table.html  index.html
templates/reviews/classic/ep005/: _table.html  index.html
templates/reviews/classic/ep006/: _table.html  index.html
templates/reviews/classic/ep007/: _table.html  index.html
templates/reviews/romance/: index.html
templates/reviews/stars/: index.html
templates/reviews/super/: index.html
templates/reviews/supers/: index.html
templates/tables/: episode.html  episode_template.html
templates/tables/classic/: _base.html  ep001.html  ep002.html  ep003.html  ep004.html  ep005.html  ep006.html  ep007.html  ep008.html  ep009.html  ep010.html  ep011.html  ep012.html  ep013.html  ep014.html  ep015.html  ep016.html  ep017.html  ep018.html  ep019.html  ep020.html  ep021.html  ep022.html  ep023.html  ep024.html  ep025.html  ep026.html  ep027.html  ep028.html  ep029.html  ep030.html  ep031.html  ep032.html  ep033.html  ep034.html  ep035.html
(+125 files in other folders)
