[tool.poetry]
name = "sailor-moon-guide"
version = "0.1.0"
description = "My sailor moon guide source code"
authors = ["Lura Skye <l@veriny.tf>"]
packages = [
    { include = "makeup", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
