[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "sailor-moon-guide"
version = "25.0.0"
description = "My sailor moon guide source code"
license = "MPL-2.0"
authors = [
    {name = "Lura Skye", email = "fuyukai@proton.me"},
]
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6"
]

[project.scripts]
"make-up" = "makeup.__main__:main"
"next-ep" = "makeup.scripts.next_ep:main"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.2",
]

[tool.pdm]
distribution = true

[tool.pyright]
pythonVersion = "3.14"
include = ["src"]
typeCheckingMode = "strict"

reportImplicitOverride = "warning"
reportUnusedVariable = false
reportIncompatibleVariableOverride = false
reportPrivateUsage = false
reportUnusedFunction = false

[tool.ruff]
target-version = "py314"
respect-gitignore = true
src = ["src/"]
line-length = 100
indent-width = 4
output-format = "full"
preview = true

[tool.ruff.lint]
select = [
    "RUF",
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "Q",
    "YTT",
    "PYI",
    "SIM",
    "RET",
    "PERF",
    "PIE",
    "SIM",
    "C4",
    "FA",
    "ICN",
    "PYI",
    "PT",
    "RET",

    # specific docstring rules
    "D201",
    "D204",
    "D211",
    "D419", # less ugly docstrings
]
ignore = ["W291", "W293", "RUF036", "SIM108", "W391"]

[tool.ruff.lint.isort]
combine-as-imports = true
